# dtc-llm-zoomcamp

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
agents/: weather_client.py  weather_server.py
week 2/: __init__.py  helpers.py
workshops/dlt_workshop/: dlt_workshop.py
